feat: truncate passwords to 72 characters for consistency and update requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ pydantic
 pytest         
 httpx  
 python-multipart
-bcrypt
+bcrypt==3.2.0
 python-jose
 pydantic[email]
 openpyxl
@@ -12,6 +12,6 @@ pandas
 sqlalchemy
 psycopg2
 alembic>=1.13,<2.0
-passlib[bcrypt]>=1.7.4
+passlib==1.7.4
 dotenv
 starlette
